# hashgraph

./: .gitmodules  CMakeLists.txt  README.md
compiler-util/: CMakeLists.txt
experiments/: snmg-hg.ipynb
experiments/.ipynb_checkpoints/: snmg-hg-checkpoint.ipynb
experiments/dgx2/: experiments.lsf
experiments/dgx2_old/: .experiments.lsf.swp  experiments.lsf
experiments/dgx2_saved/: experiments.lsf
experiments/summit/: .experiments.lsf.swo  .experiments.lsf.swp  experiments.lsf  snmg-hg-experiments.45251
experiments/summit_saved/: experiments.lsf  snmg-hg-experiments.236999  snmg-hg-experiments.238226
hash-graph-dehornetify/: .gitignore  CMakeLists.txt  kc24-gc7-build-jsr.723598  kc28-gc6-build-jsr.724628  snmg_job.lsf
hash-graph-dehornetify/compiler-util/: CMakeLists.txt
hash-graph-dehornetify/experiments/: device_scalability.sh  experiments.lsf  experiments.sh  key_scalability.sh  plot_figures.py  snmg-hg.ipynb
hash-graph-dehornetify/include/: MultiHashGraph.cuh  MultiHashGraphDeviceOperators.cuh  MultiHashGraphHostOperators.cuh  SingleHashGraph.cuh  SingleHashGraphOperators.cuh  rmm.h
hash-graph-dehornetify/mem/: memory.cpp  memory.h
hash-graph-dehornetify/src/: MultiHashGraph.cu  SingleHashGraph.cu
hash-graph-dehornetify/test/: MultiHashGraphTest.cu  SingleHashGraphTest.cu
include/: .MultiHashGraph.cuh.swp  MultiHashGraph.cuh  MultiHashGraphDeviceOperators.cuh  MultiHashGraphHostOperators.cuh  SingleHashGraphOperators.cuh
maxflow/: .gitignore  .gitmodules  .matrix_io.h.swm  .matrix_io.h.swn  .maxflow.cpp.swm  .maxflow.cpp.swn  Makefile  README.md  allocator.h  config.h  galois-preflowpush.sh  graph_tools.h  graph_tools_cpu.cpp  graph_tools_gpu.cu  matrix.cu  matrix.h  maxflow.cpp  utils.cu
maxflow/IO/: gr_reader.h  (+2 more)
mem_old/: memory.cpp  memory_manager.cpp
outputs/: kc24-gc4-build.711620  kc24-gc5-build-jsr.723582  kc24-gc5-build-jsr.723585  kc24-gc5-build-jsr.723597  kc24-gc5-build.711637  kc24-gc5-build.712197  kc24-gc5-build.712207  kc24-gc5-build.712211  kc24-gc5-build.712214  kc24-gc5-build.712220  kc24-gc5-build.712223  kc24-gc6-build.711629  kc24-gc6-build.723548  kc24-gc7-build-jsr.723598  snmg-hg-experiments.724692  snmg-hg-experiments.724693  snmg-hg-experiments.725107  snmg-hg-experiments.725114  snmg-hg-experiments.725246  snmg-hg-experiments.726551  test-snmg.711507
src/: .SingleHashGraph.cu.swp  MultiHashGraph.cu  SingleHashGraph.cu
test/: .MultiHashGraphTest.cu.swp  MultiHashGraphTest.cu  MultiHashGraphTest_saved.cu  SingleHashGraphTest.cu
(+743 files in other folders)
